--- a/app/src/main/res/layout/item_editable.xml
+++ b/app/src/main/res/layout/item_editable.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
         android:textSize="16sp"
